movil pequeño y mediano en pruebas

--- a/index.html
+++ b/index.html
@@ -149,30 +149,28 @@
                         </li>
                     </ul>
                     <ul id="fourth_ul" class="ul_container">
-                        <div>
-                            <li class="li_container">
-                                <span class="separator_vertical"></span>
-                                <div class="info-content" style="height: 56px">
-                                    <img class="info-icons" src="/assets/icons/no_photography.png"
-                                        alt="Icono de un autobús">
-                                    <h3 class="info-text bold">01:00</h3>
-                                </div>
-                            </li>
-                            <li>
-                                <h3 id="after-text">Y para quienes la noche aún sea jóven, la <br> celebración continúa
-                                    en la Finca Sorribas, un <br> lugar mágico en Villaviciosa. A un kilómetro
-                                    <br> caminando desde la parada del bus. La fiesta <br>
-                                    corre de nuestra cuenta y, para todo lo <br>demás, nuestra cuenta es:
-                                </h3>
-                            </li>
-                            <li>
-                                <h3 id="iban" class="bold">ES91 0073 0100 5106 1230 8849</h3>
-                            </li>
-                            <li>
-                                <h3>¡Os esperamos a todos!</h3>
-                            </li>
-
-                        </div>
+                        <li class="li_container">
+                            <span class="separator_vertical"></span>
+                            <div class="info-content" style="height: 56px">
+                                <img class="info-icons" src="/assets/icons/no_photography.png"
+                                    alt="Icono de un autobús">
+                                <h3 class="info-text bold">01:00</h3>
+                            </div>
+                        </li>
+                        <li>
+                            <h3 id="after-text">Y para quienes la noche aún sea jóven, la celebración continúa
+                                en la Finca Sorribas, un lugar mágico en Villaviciosa. A un kilómetro
+                                caminando desde la parada del bus. La fiesta
+                                corre de nuestra cuenta y, para todo lo demás, nuestra cuenta es:
+                            </h3>
+                        </li>
+                        <li>
+                            <h3 id="iban" class="bold">ES91 0073 0100 5106 1230 8849</h3>
+                        </li>
+                        <li>
+                            <h3>¡Os esperamos a todos!</h3>
+                        </li>
+                        <span style="height: 30svh;"></span>
                     </ul>
                 </div>
             </div>
