movil pequeño y mediano en pruebas

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                         <li>
                             <h3>¡Os esperamos a todos!</h3>
                         </li>
-                        <span style="height: 30svh;"></span>
+                        <span id="last_separator_line"></span>
                     </ul>
                 </div>
             </div>
