cuenta bancaria omitida

--- a/index.html
+++ b/index.html
@@ -165,7 +165,8 @@
                             </h3>
                         </li>
                         <li>
-                            <h3 id="iban" class="bold">ES91 0073 0100 5106 1230 8849</h3>
+                            <h3 id="iban" class="bold">ESXX XXXX XXXX XXXX XXXX XXXX</h3>
+                            <!-- <h3 id="iban" class="bold">ES91 0073 0100 5106 1230 8849</h3> -->
                         </li>
                         <li>
                             <h3>¡Os esperamos a todos!</h3>
