nuevas imagenes de fondo

--- a/index.html
+++ b/index.html
@@ -88,17 +88,17 @@
                         <li class="li_container">
                             <span class="separator_vertical transparent"></span>
                             <div class="info-content">
-                                <img class="info-icons" src="/assets/icons/directions_bus.png"
+                                <img class="info-icons" src="/assets/icons/directions_bus.svg"
                                     alt="Icono de un autobús">
                                 <h3 class="info-text bold">12:00</h3>
-                                <h3 class="info-text">Bus desde Villaviciosa</h3>
+                                <h3 class="info-text">Bus Villaviciosa - Torazo</h3>
                             </div>
                             <span class="separator_vertical"></span>
                         </li>
                         <li class="li_container">
                             <span class="separator_vertical"></span>
                             <div class="info-content">
-                                <img class="info-icons" src="/assets/icons/photo_camera.png"
+                                <img class="info-icons" src="/assets/icons/photo_camera.svg"
                                     alt="Icono de una cámara de fotos">
                                 <h3 class="info-text bold">13:00</h3>
                                 <h3 class="info-text">Ceremonia</h3>
@@ -108,10 +108,10 @@
                         <li class="li_container">
                             <span class="separator_vertical"></span>
                             <div class="info-content">
-                                <img class="info-icons" src="/assets/icons/tapas.png"
+                                <img class="info-icons" src="/assets/icons/tapas.svg"
                                     alt="Icono de un cuchillo y tenedor">
                                 <h3 class="info-text bold">13:30</h3>
-                                <h3 class="info-text">Cóctel</h3>
+                                <h3 class="info-text">Picoteo</h3>
                             </div>
                             <span class="separator_vertical"></span>
                         </li>
@@ -120,30 +120,30 @@
                         <li class="li_container">
                             <span class="separator_vertical"></span>
                             <div class="info-content">
-                                <img class="info-icons" src="/assets/icons/restaurant.png"
+                                <img class="info-icons" src="/assets/icons/restaurant.svg"
                                     alt="Icono de un restaurante">
                                 <h3 class="info-text bold">15:00</h3>
-                                <h3 class="info-text">Banquete</h3>
+                                <h3 class="info-text">Comilona</h3>
                             </div>
                             <span class="separator_vertical"></span>
                         </li>
                         <li class="li_container">
                             <span class="separator_vertical"></span>
                             <div class="info-content">
-                                <img class="info-icons" src="/assets/icons/celebration.png"
+                                <img class="info-icons" src="/assets/icons/celebration.svg"
                                     alt="Icono de una celebración">
                                 <h3 class="info-text bold">17:00</h3>
-                                <h3 class="info-text">Baile</h3>
+                                <h3 class="info-text">Fiestuqui</h3>
                             </div>
                             <span class="separator_vertical"></span>
                         </li>
                         <li class="li_container">
                             <span class="separator_vertical"></span>
                             <div class="info-content">
-                                <img class="info-icons" src="/assets/icons/directions_bus.png"
+                                <img class="info-icons" src="/assets/icons/directions_bus.svg"
                                     alt="Icono de un autobús">
                                 <h3 class="info-text bold">23:59</h3>
-                                <h3 class="info-text">Bus desde Torazo</h3>
+                                <h3 class="info-text">Bus Torazo - Villaviciosa</h3>
                             </div>
                             <span class="separator_vertical"></span>
                         </li>
@@ -152,7 +152,7 @@
                         <li class="li_container">
                             <span class="separator_vertical"></span>
                             <div class="info-content" style="height: 56px">
-                                <img class="info-icons" src="/assets/icons/no_photography.png"
+                                <img class="info-icons" src="/assets/icons/no_photography.svg"
                                     alt="Icono de un autobús">
                                 <h3 class="info-text bold">01:00</h3>
                             </div>
