ajustes para nuevos separadores

--- a/index.html
+++ b/index.html
@@ -35,10 +35,6 @@
 
     <body>
         <div class="background-section morning" id="fixed">
-            <div class="deviceVH">
-                <p id="height"></p>
-                <p id="width"></p>
-            </div>
             <!-- imágenes de cielo -->
             <div class="sky-container">
                 <img id="sky_image" src="assets/images/mobile_sky_morning.png" alt="Nubes y pájaros de fondo">
@@ -86,6 +82,9 @@
                     </ul>
                     <ul id="second_ul" class="ul_container">
                         <li class="li_container">
+                            <span class="separator transparent"></span>
+                        </li>
+                        <li class="li_container">
                             <span class="separator_vertical transparent"></span>
                             <div class="info-content">
                                 <img class="info-icons" src="/assets/icons/directions_bus.svg"
@@ -115,8 +114,14 @@
                             </div>
                             <span class="separator_vertical"></span>
                         </li>
+                        <li class="li_container">
+                            <span class="separator"></span>
+                        </li>
                     </ul>
                     <ul id="third_ul" class="ul_container">
+                        <li class="li_container">
+                            <span class="separator"></span>
+                        </li>
                         <li class="li_container">
                             <span class="separator_vertical"></span>
                             <div class="info-content">
@@ -147,8 +152,14 @@
                             </div>
                             <span class="separator_vertical"></span>
                         </li>
+                        <li class="li_container">
+                            <span class="separator"></span>
+                        </li>
                     </ul>
                     <ul id="fourth_ul" class="ul_container">
+                        <li class="li_container">
+                            <span class="separator"></span>
+                        </li>
                         <li class="li_container">
                             <span class="separator_vertical"></span>
                             <div class="info-content" style="height: 56px">
