ajustes para nuevos separadores

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                         <span style="height: 20svh;"></span>
                     </ul>
                     <ul id="second_ul" class="ul_container">
-                        <li class="li_container">
+                        <li class="separator_container">
                             <span class="separator transparent"></span>
                         </li>
                         <li class="li_container">
@@ -114,12 +114,12 @@
                             </div>
                             <span class="separator_vertical"></span>
                         </li>
-                        <li class="li_container">
+                        <li class="separator_container">
                             <span class="separator"></span>
                         </li>
                     </ul>
                     <ul id="third_ul" class="ul_container">
-                        <li class="li_container">
+                        <li class="separator_container">
                             <span class="separator"></span>
                         </li>
                         <li class="li_container">
@@ -152,12 +152,12 @@
                             </div>
                             <span class="separator_vertical"></span>
                         </li>
-                        <li class="li_container">
+                        <li class="separator_container">
                             <span class="separator"></span>
                         </li>
                     </ul>
                     <ul id="fourth_ul" class="ul_container">
-                        <li class="li_container">
+                        <li class="separator_container">
                             <span class="separator"></span>
                         </li>
                         <li class="li_container">
