--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
             <div class="image-container">
                 <img id="landscape_image" class="bgimage" src="/assets/images/mobile_landscape_morning.png"
                     alt="Imagen de paisaje por la mañana">
+                <img id="landscape_image" class="bgimage" src="/assets/images/mobile_landscape_morning.png"
+                    alt="Imagen de paisaje por la mañana">
             </div>
             <div id="scrollContainer">
                 <div id="list-container">
@@ -138,7 +140,7 @@
                                 <img class="info-icons" src="/assets/icons/celebration.svg"
                                     alt="Icono de una celebración">
                                 <h3 class="info-text bold">17:00</h3>
-                                <h3 class="info-text">Fiestuqui</h3>
+                                <h3 class="info-text">Fiesta</h3>
                             </div>
                             <span class="separator_vertical"></span>
                         </li>
