--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Scroll Transition Gallery</title>
+        <title>Dan & Car</title>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link
@@ -159,7 +159,7 @@
                         </li>
                     </ul>
                     <ul id="fourth_ul" class="ul_container">
-                        <li class="separator_container">
+                        <li class="separator_container last_ul">
                             <span class="separator"></span>
                         </li>
                         <li class="li_container">
@@ -178,8 +178,8 @@
                             </h3>
                         </li>
                         <li>
-                            <h3 id="iban" class="bold">ESXX XXXX XXXX XXXX XXXX XXXX</h3>
-                            <!-- <h3 id="iban" class="bold">ES91 0073 0100 5106 1230 8849</h3> -->
+                            <!-- <h3 id="iban" class="bold">ESXX XXXX XXXX XXXX XXXX XXXX</h3> -->
+                            <h3 id="iban" class="bold">ES91 0073 0100 5106 1230 8849</h3>
                         </li>
                         <li>
                             <h3>¡Os esperamos a todos!</h3>
