--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
             </div>
             <!-- botón de desplazamiento -->
             <div class="flex-container">
-                <button id="float-button">
-                    <img id="button-image" src="/assets/buttons/down-scroll-button-rest.svg" alt="Icono del botón">
+                <button id="float-button" style="background-color: white !important;opacity: 0.65 !important;">
+                    <img id="button-image" class="bounceDown" src="/assets/buttons/arrow-button-down.svg" alt="Icono del botón">
                 </button>
             </div>
             <!-- imágenes de background -->
