ajustes animacion boton

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
             integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <script src="https://code.jquery.com/jquery-3.7.1.min.js"
             integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+        <script src="https://code.jquery.com/ui/1.13.3/jquery-ui.min.js"></script>
+        <link rel="stylesheet" href="https://code.jquery.com/ui/1.13.3/themes/base/jquery-ui.css">
 
         <script src="/assets/js/script.js"></script>
         <script>
@@ -42,7 +44,8 @@
             <!-- botón de desplazamiento -->
             <div class="flex-container">
                 <button id="float-button" style="background-color: white !important;opacity: 0.65 !important;">
-                    <img id="button-image" class="bounceDown" src="/assets/buttons/arrow-button-down.svg" alt="Icono del botón">
+                    <img id="button-image" class="bounceDown" src="/assets/buttons/arrow-button-down.svg"
+                        alt="Icono del botón">
                 </button>
             </div>
             <!-- imágenes de background -->
