mejoras lanscape, iban copiar

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Dan & Car</title>
+        <title>Invitación</title>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link
@@ -182,7 +182,7 @@
                         </li>
                         <li>
                             <!-- <h3 id="iban" class="bold">ESXX XXXX XXXX XXXX XXXX XXXX</h3> -->
-                            <h3 id="iban" class="bold">ES91 0073 0100 5106 1230 8849</h3>
+                            <h3 id="iban" class="bold" onclick="copyToClipboard()">ES91 0073 0100 5106 1230 8849</h3>
                         </li>
                         <li>
                             <h3>¡Os esperamos a todos!</h3>
