--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                         <li class="separator_container">
                             <span class="separator transparent"></span>
                         </li>
-                        <li class="li_container">
+                        <li class="li_container" id="busInfo">
                             <span class="separator_vertical transparent"></span>
                             <div class="info-content">
                                 <img class="info-icons" src="/assets/icons/directions_bus.svg"
