enlace copiado estilos

--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
     </head>
 
     <body>
+        <div id="notification">IBAN copiado al portapapeles</div>
+
         <div class="background-section morning" id="fixed">
             <!-- imágenes de cielo -->
             <div class="sky-container">
