enlace copiado estilos

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </head>
 
     <body>
-        <div id="notification">IBAN copiado al portapapeles</div>
+        <div id="notification" style="display: none;">IBAN copiado al portapapeles</div>
 
         <div class="background-section morning" id="fixed">
             <!-- imágenes de cielo -->
