--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </script>
     </head>
 
-    <body>
+    <body class="loading">
         <div id="notification" style="display: none;">IBAN copiado al portapapeles</div>
 
         <div class="background-section morning" id="fixed">
