cursor pointer bus

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                         <li class="separator_container">
                             <span class="separator transparent"></span>
                         </li>
-                        <li class="li_container" id="busInfo">
+                        <li class="li_container" style="cursor: pointer;" id="busInfo">
                             <span class="separator_vertical transparent"></span>
                             <div class="info-content">
                                 <img class="info-icons" src="/assets/icons/directions_bus.svg"
